{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 186,
  "lineage": "1e155916-c576-af5e-ff25-a521b937be60",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b042892315925cb",
            "domain": "vpc",
            "id": "eipalloc-02b042892315925cb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-26-93.compute-1.amazonaws.com",
            "public_ip": "44.221.26.93",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "username": "blue"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:internet-gateway/igw-000a1190fb3b199d8",
            "id": "igw-000a1190fb3b199d8",
            "owner_id": "797918408294",
            "tags": {
              "Name": "blue-IGW"
            },
            "tags_all": {
              "Name": "blue-IGW",
              "username": "blue"
            },
            "vpc_id": "vpc-0437c85e3a4617e63"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b042892315925cb",
            "association_id": "eipassoc-0a5332e6f87af6e73",
            "connectivity_type": "public",
            "id": "nat-09cb5d6eec2475795",
            "network_interface_id": "eni-0ba986a66b79e7c3e",
            "private_ip": "10.0.0.237",
            "public_ip": "44.221.26.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e89d0c6384e4137",
            "tags": {
              "Name": "blue-NAT"
            },
            "tags_all": {
              "Name": "blue-NAT",
              "username": "blue"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03a5a7a6a30e7249f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09cb5d6eec2475795",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a5a7a6a30e7249f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.main_NAT",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-000a1190fb3b199d8",
            "id": "r-rtb-0b7a0502cecfde4031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7a0502cecfde403",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:route-table/rtb-03a5a7a6a30e7249f",
            "id": "rtb-03a5a7a6a30e7249f",
            "owner_id": "797918408294",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "blue-privateRT"
            },
            "tags_all": {
              "Name": "blue-privateRT",
              "username": "blue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0437c85e3a4617e63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:route-table/rtb-0b7a0502cecfde403",
            "id": "rtb-0b7a0502cecfde403",
            "owner_id": "797918408294",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "blue-publicRT"
            },
            "tags_all": {
              "Name": "blue-publicRT",
              "username": "blue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0437c85e3a4617e63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048fc61fe213616ce",
            "route_table_id": "rtb-03a5a7a6a30e7249f",
            "subnet_id": "subnet-0c2824530df9a20a2"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029bfe9ca2a940918",
            "route_table_id": "rtb-03a5a7a6a30e7249f",
            "subnet_id": "subnet-0af21d3647c6733d9"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4fd70a3b96c700f",
            "route_table_id": "rtb-0b7a0502cecfde403",
            "subnet_id": "subnet-04e89d0c6384e4137"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079d9013c5ba58742",
            "route_table_id": "rtb-0b7a0502cecfde403",
            "subnet_id": "subnet-0dad04f9a535b7b83"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-0c2824530df9a20a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2824530df9a20a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "blue-private-us-east-1a"
            },
            "tags_all": {
              "Name": "blue-private-us-east-1a",
              "username": "blue"
            },
            "vpc_id": "vpc-0437c85e3a4617e63"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-0af21d3647c6733d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af21d3647c6733d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "blue-private-us-east-1b"
            },
            "tags_all": {
              "Name": "blue-private-us-east-1b",
              "username": "blue"
            },
            "vpc_id": "vpc-0437c85e3a4617e63"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-04e89d0c6384e4137",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e89d0c6384e4137",
            "ipv6_cidr_block": "2600:1f18:7a20:3000::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0332ee1106283af2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "blue-public-us-east-1a"
            },
            "tags_all": {
              "Name": "blue-public-us-east-1a",
              "username": "blue"
            },
            "vpc_id": "vpc-0437c85e3a4617e63"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-0dad04f9a535b7b83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dad04f9a535b7b83",
            "ipv6_cidr_block": "2600:1f18:7a20:3001::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0fcd12683d0fe81de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "blue-public-us-east-1b"
            },
            "tags_all": {
              "Name": "blue-public-us-east-1b",
              "username": "blue"
            },
            "vpc_id": "vpc-0437c85e3a4617e63"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:vpc/vpc-0437c85e3a4617e63",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06262ea678fd7c0d2",
            "default_route_table_id": "rtb-0d060ddb2932f323d",
            "default_security_group_id": "sg-05f39496aa846ab1f",
            "dhcp_options_id": "dopt-0b0655287249fb28a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0437c85e3a4617e63",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-05c9ce7b0ac44f100",
            "ipv6_cidr_block": "2600:1f18:7a20:3000::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d060ddb2932f323d",
            "owner_id": "797918408294",
            "tags": {
              "Name": "blue-vpc"
            },
            "tags_all": {
              "Name": "blue-vpc",
              "username": "blue"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:security-group/sg-0aface7ea9149a204",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0aface7ea9149a204",
            "ingress": [],
            "name": "blue-team-cluster-cluster-2024021218532634270000000c",
            "name_prefix": "blue-team-cluster-cluster-",
            "owner_id": "797918408294",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blue-team-cluster-cluster"
            },
            "tags_all": {
              "Name": "blue-team-cluster-cluster",
              "username": "blue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0437c85e3a4617e63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:security-group/sg-03c6136f161306b4f",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-03c6136f161306b4f",
            "ingress": [],
            "name": "blue-team-cluster-node-2024021218532634270000000d",
            "name_prefix": "blue-team-cluster-node-",
            "owner_id": "797918408294",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blue-team-cluster-node",
              "kubernetes.io/cluster/blue-team-cluster": "owned"
            },
            "tags_all": {
              "Name": "blue-team-cluster-node",
              "kubernetes.io/cluster/blue-team-cluster": "owned",
              "username": "blue"
            },
            "timeouts": null,
            "vpc_id": "vpc-0437c85e3a4617e63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2764960177",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0aface7ea9149a204",
            "security_group_rule_id": "sgr-09168450573b894c4",
            "self": false,
            "source_security_group_id": "sg-03c6136f161306b4f",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1489512854",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03c6136f161306b4f",
            "security_group_rule_id": "sgr-0b7177208b67bf14f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2802005991",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03c6136f161306b4f",
            "security_group_rule_id": "sgr-0bafaf88a0b17cf80",
            "self": false,
            "source_security_group_id": "sg-0aface7ea9149a204",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2100187721",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03c6136f161306b4f",
            "security_group_rule_id": "sgr-0af3d30f5831993e0",
            "self": false,
            "source_security_group_id": "sg-0aface7ea9149a204",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3026990559",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03c6136f161306b4f",
            "security_group_rule_id": "sgr-0d53391aaafbe98a8",
            "self": false,
            "source_security_group_id": "sg-0aface7ea9149a204",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2804943358",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03c6136f161306b4f",
            "security_group_rule_id": "sgr-016cdc6e527f3d333",
            "self": false,
            "source_security_group_id": "sg-0aface7ea9149a204",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3281074741",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03c6136f161306b4f",
            "security_group_rule_id": "sgr-0a84df272fd39a21d",
            "self": false,
            "source_security_group_id": "sg-0aface7ea9149a204",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3407108954",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03c6136f161306b4f",
            "security_group_rule_id": "sgr-0ef8e924e73f9e38e",
            "self": false,
            "source_security_group_id": "sg-0aface7ea9149a204",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2408388598",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03c6136f161306b4f",
            "security_group_rule_id": "sgr-0d0203f5b7999b77a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2370015161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03c6136f161306b4f",
            "security_group_rule_id": "sgr-0bc367b472dc728d2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-689712214",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-03c6136f161306b4f",
            "security_group_rule_id": "sgr-087fbe64ee56db379",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}